[package]
name = "winbean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipconfig = "0.3.0"
whoami = "1.2.1"
winreg = "0.10.1"
sysinfo = "0.24.5"
netstat2 = "0.9.1"
chrono = "0.4"
walkdir = "2.3.2"
faccess = "0.2.4"
regex = "1.5.6"
clearscreen = "1.0.10"
lazy_static = "1.4.0"
